syntax = "proto3";

option csharp_namespace = "CultivationHistory";

package cultivationhistory;

service CultivationHistoryService {
  rpc CreateCultivationHistory (CreateCultivationHistoryRequest) returns (CreateCultivationHistoryReply);
  rpc DeleteCultivationHistory (DeleteCultivationHistoryRequest) returns (DeleteCultivationHistoryReply);
}

message CreateCultivationHistoryRequest {
  string fieldId = 1;
}

message DeleteCultivationHistoryRequest {
  string fieldId = 1;
}

message CreateCultivationHistoryReply {
}

message DeleteCultivationHistoryReply {
}